Fixed layout issues

--- a/src/index.scss
+++ b/src/index.scss
@@ -95,7 +95,7 @@ body {
 
   #main-section {
     width: 100%;
-    min-height: 90%;
+    min-height: 85%;
     padding: 0;
     position: relative;
     margin-bottom: 50px;
